# cybertantra-terminal

./: .gitignore  CLAUDE.md  Makefile  README.md  build-readers.prose  go.mod  go.sum  main.go
apps/go/: .env.example  Makefile  go.mod
apps/go/cmd/web/: main.go
apps/go/internal/app/: model.go
apps/go/internal/invocation/content/: 01-the-invocation.md
apps/ink/: README.md  index.html  package-lock.json  package.json  serve-ttyd.sh  tsconfig.json
apps/ink/src/: App.tsx  chapters.ts  cli.tsx  colors.ts  markdown.ts  progress.ts  types.ts
apps/ink/src/components/: ChapterIntro.tsx  ChapterModal.tsx  ExitScreen.tsx  FocalLine.tsx  Reader.tsx  ResumePrompt.tsx  SplashScreen.tsx
apps/textual/: README.md  main.py  pyproject.toml  requirements.txt  styles.tcss
apps/web/: README.md  index.html
assets/: manifesto.md
cmd/server/: main.go
cmd/web/static/: index.html
content/chapters/: 01-the-frontier.md  02-recommended-reading.md  02-you-are-being-farmed.md  03-a-new-consciousness.md  03-the-community.md  04-poison-and-medicine.md  04-the-two-devices.md  05-initiation-rituals.md  05-the-goal.md  06-philosophy-notes.md
e2e/: test.sh
internal/app/: model.go
internal/invocation/: model.go
